--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.2.2",
     "buffer": "^6.0.3",
     "crypto": "^1.0.1",
+    "firebase": "^9.19.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
